--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,14 @@ header h1 {
     border: 2px solid #007bff;
     border-radius: 5px;
 }
+.img{
+    border-radius:50%;
+    align-items:end;
+}
+.overlay{
+    position: absolute;
+    top: 0;
+    right: 0;
+    max-width: 50%; /* Adjust as needed */
+    max-height: 50%; /* Adjust as needed */
+  }
