--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,13 @@ body {
 }
 
 nav {
-    background-color: #007bff;
+    background-color:darkcyan;
     padding: 10px;
     text-align: center;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:xx-large;
+    border-radius:10px;
+    
 }
 
 nav ul,
@@ -33,7 +37,7 @@ nav a,
 }
 
 nav a:hover {
-    background-color: #0056b3;
+    background-color:darkslategrey;
 }
 
 header {
@@ -57,10 +61,10 @@ header h1 {
     margin: 0;
 }
 .header-text{
- color:orange;
+ color:mediumspringgreen;
 }
 .span{
-    color: #000;
+    color:black;
 }
 
 .main-content-container {
@@ -68,7 +72,6 @@ header h1 {
     justify-content: space-between;
     padding: 40px;
 }
-
 .Projects,
 .Certification {
     flex: 0 0 48%;
@@ -77,6 +80,7 @@ header h1 {
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .social-media-footer {
@@ -84,12 +88,15 @@ header h1 {
     padding: 20px;
     text-align: center;
     color: #fff;
+    
 }
 
 .social-media-footer a {
     text-decoration: none;
     color: #fff;
     font-size: 24px;
+    padding: 20px;
+    font-size:xx-large;
 }
 
 .social-media-footer a:hover {
@@ -100,14 +107,13 @@ header h1 {
     border: 2px solid #007bff;
     border-radius: 5px;
 }
-.img{
-    border-radius:50%;
-    align-items:end;
-}
+
 .overlay{
     position: absolute;
-    top: 0;
-    right: 0;
-    max-width: 50%; /* Adjust as needed */
-    max-height: 50%; /* Adjust as needed */
+    top: 0px;
+    right: 600px;
+    bottom: 80px;
+    max-width: 50%;
+    max-height: 180%; 
+    border-radius:50%;
   }
